# CPP-Exercises

./: README.md
exercise-1/: CMakeLists.txt  Doxyfile
exercise-1-makefile/docs/: Open Documentation.lnk
exercise-1-makefile/docs/html/: _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  dir_31f2b4e1bab977d4818ecdae6b7c2ea8.html  dir_31f2b4e1bab977d4818ecdae6b7c2ea8.js  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_ef2268f0b1ad4560c2bea42093b38a4d.html  dir_f89abcb304c928c7d889aa5625570de5.html  dir_f89abcb304c928c7d889aa5625570de5.js  dir_fec58b41e16e2c1b43c9fc4c05e7737b.html  dir_fec58b41e16e2c1b43c9fc4c05e7737b.js  feature__tests_8c.html  feature__tests_8cxx.html  feature__tests_8cxx_source.html  files.html  fun__strings_8cpp.js  fun__strings_8cpp_source.html  fun__strings_8h_source.html  globals_defs.html  globals_vars.html  main_8cpp.html  main_8cpp_source.html  menudata.js  navtreedata.js  navtreeindex0.js
exercise-1-makefile/include/: fun_strings.h
exercise-1-makefile/src/: fun_strings.cpp
exercise-1/docs/html/: _c_make_c_compiler_id_8c.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  (+10 more)
exercise-1/include/: fun_strings.h
exercise-1/src/: fun_strings.cpp  main.cpp
exercise-2-namespace/: CMakeLists.txt
exercise-2-namespace/include/: dbuffer.h
exercise-2-namespace/src/: dbuffer.cpp  main.cpp
exercise-3-class/: CMakeLists.txt  Makefile  README.md
exercise-3-class/include/: dbuffer.h
exercise-3-class/src/: dbuffer.cpp  main.cpp
exercise-3-class/tests/: unittest.cpp
exercise-4-phonebook/: CMakeLists.txt
exercise-4-phonebook/include/: phonebook.h  voice.h
exercise-4-phonebook/src/: phonebook.cpp  voice.cpp
exercise-5-operators/: CMakeLists.txt  main.cpp
templates/: CMakeLists.txt  Doxyfile  README.md
(+24 files in other folders)
